src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EXIT
    INHERITED
    INTERRUPT
    PRIVATE
    TEXT

Grammar

Rule 0     S' -> program
Rule 1     program -> program_header uses_clause declaration_blocks main_block
Rule 2     program_header -> PROGRAM ID SEMICOLON
Rule 3     program_header -> UNIT ID SEMICOLON
Rule 4     uses_clause -> USES id_list SEMICOLON
Rule 5     uses_clause -> empty
Rule 6     id_list -> ID
Rule 7     id_list -> id_list COMMA ID
Rule 8     declaration_blocks -> declaration_blocks declaration_block
Rule 9     declaration_blocks -> empty
Rule 10    declaration_block -> label_declaration
Rule 11    declaration_block -> const_declaration_block
Rule 12    declaration_block -> type_declaration_block
Rule 13    declaration_block -> var_declaration_block
Rule 14    declaration_block -> procedure_declaration
Rule 15    declaration_block -> function_declaration
Rule 16    declaration_block -> constructor_implementation
Rule 17    declaration_block -> destructor_implementation
Rule 18    declaration_block -> method_implementation
Rule 19    declaration_block -> implementation_block
Rule 20    declaration_block -> interface_block
Rule 21    main_block -> compound_statement DOT
Rule 22    interface_block -> INTERFACE declaration_blocks
Rule 23    implementation_block -> IMPLEMENTATION declaration_blocks
Rule 24    label_declaration -> LABEL number_list SEMICOLON
Rule 25    number_list -> NUMBER
Rule 26    number_list -> number_list COMMA NUMBER
Rule 27    const_declaration_block -> CONST const_list
Rule 28    const_list -> const_list const_declaration
Rule 29    const_list -> const_declaration
Rule 30    const_declaration -> ID EQUAL constant SEMICOLON
Rule 31    const_declaration -> ID COLON data_type_list EQUAL constant SEMICOLON
Rule 32    constant -> NUMBER
Rule 33    constant -> STRING
Rule 34    constant -> TRUE
Rule 35    constant -> FALSE
Rule 36    constant -> NIL
Rule 37    constant -> ORDINAL_CONSTANT
Rule 38    constant -> set_constructor
Rule 39    call_argument -> expression
Rule 40    call_argument -> expression COLON expression
Rule 41    call_argument -> expression COLON expression COLON expression
Rule 42    call_argument_list -> call_argument_list COMMA call_argument
Rule 43    call_argument_list -> call_argument
Rule 44    call_argument_list_opt -> call_argument_list
Rule 45    call_argument_list_opt -> empty
Rule 46    type_declaration_block -> TYPE type_list
Rule 47    type_list -> type_list type_declaration
Rule 48    type_list -> type_declaration
Rule 49    type_declaration -> ID EQUAL type_definition SEMICOLON
Rule 50    type_definition -> data_type_list
Rule 51    type_definition -> LPAREN id_list RPAREN
Rule 52    type_definition -> NUMBER DOBLEDOT NUMBER
Rule 53    type_definition -> CHAR DOBLEDOT CHAR
Rule 54    type_definition -> ID DOBLEDOT ID
Rule 55    type_definition -> record_type
Rule 56    type_definition -> array_type
Rule 57    type_definition -> set_type
Rule 58    type_definition -> pointer_type
Rule 59    type_definition -> file_type
Rule 60    type_definition -> object_type
Rule 61    type_definition -> string_type
Rule 62    string_type -> STRING
Rule 63    string_type -> STRING LBRACKET NUMBER RBRACKET
Rule 64    record_type -> RECORD record_list END
Rule 65    record_type -> PACKED RECORD record_list END
Rule 66    array_type -> ARRAY LBRACKET type_range_list RBRACKET OF data_type_list
Rule 67    array_type -> PACKED ARRAY LBRACKET type_range_list RBRACKET OF data_type_list
Rule 68    array_type -> ARRAY OF data_type_list
Rule 69    type_range_list -> type_range
Rule 70    type_range_list -> type_range_list COMMA type_range
Rule 71    type_range -> NUMBER DOBLEDOT NUMBER
Rule 72    type_range -> NUMBER DOBLEDOT ID
Rule 73    type_range -> ID DOBLEDOT NUMBER
Rule 74    type_range -> CHAR DOBLEDOT CHAR
Rule 75    type_range -> ID DOBLEDOT ID
Rule 76    type_range -> ID
Rule 77    set_range -> data_type_set
Rule 78    set_range -> NUMBER DOBLEDOT NUMBER
Rule 79    set_range -> CHAR DOBLEDOT CHAR
Rule 80    set_range -> ID
Rule 81    set_type -> SET OF set_range
Rule 82    pointer_type -> CARET ID
Rule 83    pointer_type -> CARET data_type_list
Rule 84    file_type -> FILE OF data_type_list
Rule 85    file_type -> FILE
Rule 86    object_type -> OBJECT object_heritage object_fields object_methods END
Rule 87    object_heritage -> LPAREN ID RPAREN
Rule 88    object_heritage -> empty
Rule 89    object_fields -> object_fields var_declaration
Rule 90    object_fields -> empty
Rule 91    object_methods -> object_methods method_declaration
Rule 92    object_methods -> empty
Rule 93    method_declaration -> procedure_header SEMICOLON
Rule 94    method_declaration -> function_header SEMICOLON
Rule 95    method_declaration -> constructor_declaration
Rule 96    method_declaration -> destructor_declaration
Rule 97    method_declaration -> procedure_header SEMICOLON directive
Rule 98    method_declaration -> function_header SEMICOLON directive
Rule 99    constructor_implementation -> CONSTRUCTOR ID DOT ID parameters SEMICOLON declaration_blocks compound_statement SEMICOLON
Rule 100   destructor_implementation -> DESTRUCTOR ID DOT ID parameters SEMICOLON declaration_blocks compound_statement SEMICOLON
Rule 101   method_implementation -> PROCEDURE ID DOT ID parameters SEMICOLON declaration_blocks compound_statement SEMICOLON
Rule 102   method_implementation -> FUNCTION ID DOT ID parameters COLON data_type_list SEMICOLON declaration_blocks compound_statement SEMICOLON
Rule 103   constructor_declaration -> CONSTRUCTOR ID parameters SEMICOLON
Rule 104   constructor_declaration -> CONSTRUCTOR ID parameters SEMICOLON directive
Rule 105   destructor_declaration -> DESTRUCTOR ID parameters SEMICOLON
Rule 106   destructor_declaration -> DESTRUCTOR ID parameters SEMICOLON directive
Rule 107   record_list -> record_list record_declaration
Rule 108   record_list -> record_declaration
Rule 109   record_declaration -> id_list COLON data_type_list SEMICOLON
Rule 110   record_declaration -> CASE ID COLON data_type_list OF variant_list
Rule 111   record_declaration -> id_list COLON data_type_list
Rule 112   variant_list -> variant_list variant
Rule 113   variant_list -> variant
Rule 114   variant -> constant_list COLON LPAREN record_list RPAREN SEMICOLON
Rule 115   variant -> constant_list COLON LPAREN RPAREN SEMICOLON
Rule 116   constant_list -> constant
Rule 117   constant_list -> constant_list COMMA constant
Rule 118   var_declaration_block -> VAR var_list
Rule 119   var_list -> var_list var_declaration
Rule 120   var_list -> var_declaration
Rule 121   var_declaration -> id_list COLON type_definition SEMICOLON
Rule 122   var_declaration -> id_list COLON type_definition EQUAL expression SEMICOLON
Rule 123   var_declaration -> id_list COLON type_definition ABSOLUTE ID SEMICOLON
Rule 124   procedure_declaration -> procedure_header SEMICOLON directive
Rule 125   procedure_declaration -> procedure_header SEMICOLON declaration_blocks compound_statement SEMICOLON
Rule 126   procedure_header -> PROCEDURE ID parameters
Rule 127   directive -> FORWARD
Rule 128   directive -> EXTERNAL
Rule 129   directive -> EXTERNAL STRING
Rule 130   directive -> ASM
Rule 131   directive -> INLINE
Rule 132   directive -> VIRTUAL
Rule 133   function_declaration -> function_header SEMICOLON directive
Rule 134   function_declaration -> function_header SEMICOLON declaration_blocks compound_statement SEMICOLON
Rule 135   function_header -> FUNCTION ID parameters COLON data_type_list
Rule 136   parameters -> LPAREN parameter_list RPAREN
Rule 137   parameters -> empty
Rule 138   parameter_list -> parameter_list SEMICOLON parameter_group
Rule 139   parameter_list -> parameter_group
Rule 140   parameter_group -> id_list COLON data_type_list
Rule 141   parameter_group -> VAR id_list COLON data_type_list
Rule 142   parameter_group -> CONST id_list COLON data_type_list
Rule 143   parameter_group -> procedure_header
Rule 144   parameter_group -> function_header
Rule 145   data_type_list -> INTEGER
Rule 146   data_type_list -> BYTE
Rule 147   data_type_list -> LONGINT
Rule 148   data_type_list -> SHORTINT
Rule 149   data_type_list -> WORD
Rule 150   data_type_list -> REAL
Rule 151   data_type_list -> SINGLE
Rule 152   data_type_list -> DOUBLE
Rule 153   data_type_list -> EXTENDED
Rule 154   data_type_list -> SHORT
Rule 155   data_type_list -> BOOLEAN
Rule 156   data_type_list -> CHAR
Rule 157   data_type_list -> STRING
Rule 158   data_type_list -> STRING LBRACKET NUMBER RBRACKET
Rule 159   data_type_list -> ID
Rule 160   data_type_list -> ABSOLUTE ID
Rule 161   data_type_list -> FILE
Rule 162   data_type_list -> array_type
Rule 163   data_type_list -> pointer_type
Rule 164   data_type_list -> record_type
Rule 165   data_type_list -> set_type
Rule 166   data_type_list -> file_type
Rule 167   data_type_list -> object_type
Rule 168   data_type_list -> string_type
Rule 169   data_type_set -> BYTE
Rule 170   data_type_set -> SHORTINT
Rule 171   data_type_set -> WORD
Rule 172   data_type_set -> BOOLEAN
Rule 173   data_type_set -> CHAR
Rule 174   data_type_set -> ID
Rule 175   compound_statement -> BEGIN sentences_list END
Rule 176   sentences_list -> sentences_list sentence SEMICOLON
Rule 177   sentences_list -> sentence SEMICOLON
Rule 178   sentences_list -> empty
Rule 179   sentence -> assignment
Rule 180   sentence -> procedure_call
Rule 181   sentence -> compound_statement
Rule 182   sentence -> if_statement
Rule 183   sentence -> case_statement
Rule 184   sentence -> for_statement
Rule 185   sentence -> while_statement
Rule 186   sentence -> repeat_statement
Rule 187   sentence -> with_statement
Rule 188   sentence -> goto_statement
Rule 189   sentence -> labeled_sentence
Rule 190   sentence -> asm_statement
Rule 191   sentence -> empty
Rule 192   asm_statement -> ASM
Rule 193   assignment -> variable ASIGNATION expression
Rule 194   assignment -> ID ASIGNATION expression
Rule 195   assignment -> variable PLUS_ASIGN expression
Rule 196   assignment -> ID PLUS_ASIGN expression
Rule 197   assignment -> variable MINUS_ASIGN expression
Rule 198   assignment -> ID MINUS_ASIGN expression
Rule 199   assignment -> variable TIMES_ASIGN expression
Rule 200   assignment -> ID TIMES_ASIGN expression
Rule 201   assignment -> variable DIVIDE_ASIGN expression
Rule 202   assignment -> ID DIVIDE_ASIGN expression
Rule 203   procedure_call -> ID
Rule 204   procedure_call -> ID LPAREN call_argument_list_opt RPAREN
Rule 205   procedure_call -> variable DOT ID LPAREN call_argument_list_opt RPAREN
Rule 206   procedure_call -> NEW LPAREN call_argument_list_opt RPAREN
Rule 207   procedure_call -> DISPOSE LPAREN call_argument_list_opt RPAREN
Rule 208   if_statement -> IF expression THEN sentence
Rule 209   if_statement -> IF expression THEN sentence ELSE sentence
Rule 210   case_statement -> CASE expression OF case_list END
Rule 211   case_statement -> CASE expression OF case_list ELSE sentences_list SEMICOLON END
Rule 212   case_statement -> CASE expression OF case_list ELSE sentences_list END
Rule 213   case_list -> case_list case_label COLON sentence SEMICOLON
Rule 214   case_list -> case_label COLON sentence SEMICOLON
Rule 215   case_list -> empty
Rule 216   case_label -> constant
Rule 217   case_label -> constant DOBLEDOT constant
Rule 218   case_label -> case_label COMMA constant
Rule 219   for_statement -> FOR ID ASIGNATION expression TO expression DO sentence
Rule 220   for_statement -> FOR ID ASIGNATION expression DOWNTO expression DO sentence
Rule 221   for_statement -> FOR ID IN expression DO sentence
Rule 222   while_statement -> WHILE expression DO sentence
Rule 223   repeat_statement -> REPEAT sentences_list UNTIL expression
Rule 224   with_statement -> WITH variable_list DO sentence
Rule 225   variable_list -> variable
Rule 226   variable_list -> variable_list COMMA variable
Rule 227   goto_statement -> GOTO NUMBER
Rule 228   labeled_sentence -> NUMBER COLON sentence
Rule 229   empty -> <empty>
Rule 230   expression -> expression OR simple_expression
Rule 231   expression -> expression XOR simple_expression
Rule 232   expression -> simple_expression
Rule 233   simple_expression -> simple_expression AND relational_expression
Rule 234   simple_expression -> relational_expression
Rule 235   relational_expression -> relational_expression relational_operator additive_expression
Rule 236   relational_expression -> additive_expression
Rule 237   relational_operator -> EQUAL
Rule 238   relational_operator -> DISTINT
Rule 239   relational_operator -> LESS
Rule 240   relational_operator -> LESSEQUAL
Rule 241   relational_operator -> GREATER
Rule 242   relational_operator -> GREATEREQUAL
Rule 243   relational_operator -> IN
Rule 244   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 245   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 246   additive_expression -> multiplicative_expression
Rule 247   multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 248   multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 249   multiplicative_expression -> multiplicative_expression DIV unary_expression
Rule 250   multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 251   multiplicative_expression -> multiplicative_expression SHL unary_expression
Rule 252   multiplicative_expression -> multiplicative_expression SHR unary_expression
Rule 253   multiplicative_expression -> unary_expression
Rule 254   unary_expression -> NOT unary_expression
Rule 255   unary_expression -> MINUS unary_expression
Rule 256   unary_expression -> PLUS unary_expression
Rule 257   unary_expression -> ADDRESS_OF unary_expression
Rule 258   unary_expression -> primary_expression
Rule 259   primary_expression -> variable
Rule 260   primary_expression -> NUMBER
Rule 261   primary_expression -> STRING
Rule 262   primary_expression -> TRUE
Rule 263   primary_expression -> FALSE
Rule 264   primary_expression -> NIL
Rule 265   primary_expression -> LPAREN expression RPAREN
Rule 266   primary_expression -> function_call
Rule 267   primary_expression -> set_constructor
Rule 268   set_item -> expression
Rule 269   set_item -> expression DOBLEDOT expression
Rule 270   set_item_list -> set_item
Rule 271   set_item_list -> set_item_list COMMA set_item
Rule 272   set_constructor -> LBRACKET set_item_list RBRACKET
Rule 273   set_constructor -> LBRACKET RBRACKET
Rule 274   variable -> ID
Rule 275   variable -> variable DOT ID
Rule 276   variable -> variable LBRACKET expression_list RBRACKET
Rule 277   variable -> variable CARET
Rule 278   variable -> LPAREN variable RPAREN CARET
Rule 279   function_call -> ID LPAREN expression_list RPAREN
Rule 280   function_call -> ID LPAREN RPAREN
Rule 281   function_call -> variable DOT ID LPAREN expression_list RPAREN
Rule 282   function_call -> variable DOT ID LPAREN RPAREN
Rule 283   expression_list -> expression
Rule 284   expression_list -> expression_list COMMA expression

Terminals, with rules where they appear

ABSOLUTE             : 123 160
ADDRESS_OF           : 257
AND                  : 233
ARRAY                : 66 67 68
ASIGNATION           : 193 194 219 220
ASM                  : 130 192
BEGIN                : 175
BOOLEAN              : 155 172
BYTE                 : 146 169
CARET                : 82 83 277 278
CASE                 : 110 210 211 212
CHAR                 : 53 53 74 74 79 79 156 173
COLON                : 31 40 41 41 102 109 110 111 114 115 121 122 123 135 140 141 142 213 214 228
COMMA                : 7 26 42 70 117 218 226 271 284
CONST                : 27 142
CONSTRUCTOR          : 99 103 104
DESTRUCTOR           : 100 105 106
DISPOSE              : 207
DISTINT              : 238
DIV                  : 249
DIVIDE               : 248
DIVIDE_ASIGN         : 201 202
DO                   : 219 220 221 222 224
DOBLEDOT             : 52 53 54 71 72 73 74 75 78 79 217 269
DOT                  : 21 99 100 101 102 205 275 281 282
DOUBLE               : 152
DOWNTO               : 220
ELSE                 : 209 211 212
END                  : 64 65 86 175 210 211 212
EQUAL                : 30 31 49 122 237
EXIT                 : 
EXTENDED             : 153
EXTERNAL             : 128 129
FALSE                : 35 263
FILE                 : 84 85 161
FOR                  : 219 220 221
FORWARD              : 127
FUNCTION             : 102 135
GOTO                 : 227
GREATER              : 241
GREATEREQUAL         : 242
ID                   : 2 3 6 7 30 31 49 54 54 72 73 75 75 76 80 82 87 99 99 100 100 101 101 102 102 103 104 105 106 110 123 126 135 159 160 174 194 196 198 200 202 203 204 205 219 220 221 274 275 279 280 281 282
IF                   : 208 209
IMPLEMENTATION       : 23
IN                   : 221 243
INHERITED            : 
INLINE               : 131
INTEGER              : 145
INTERFACE            : 22
INTERRUPT            : 
LABEL                : 24
LBRACKET             : 63 66 67 158 272 273 276
LESS                 : 239
LESSEQUAL            : 240
LONGINT              : 147
LPAREN               : 51 87 114 115 136 204 205 206 207 265 278 279 280 281 282
MINUS                : 245 255
MINUS_ASIGN          : 197 198
MOD                  : 250
NEW                  : 206
NIL                  : 36 264
NOT                  : 254
NUMBER               : 25 26 32 52 52 63 71 71 72 73 78 78 158 227 228 260
OBJECT               : 86
OF                   : 66 67 68 81 84 110 210 211 212
OR                   : 230
ORDINAL_CONSTANT     : 37
PACKED               : 65 67
PLUS                 : 244 256
PLUS_ASIGN           : 195 196
PRIVATE              : 
PROCEDURE            : 101 126
PROGRAM              : 2
RBRACKET             : 63 66 67 158 272 273 276
REAL                 : 150
RECORD               : 64 65
REPEAT               : 223
RPAREN               : 51 87 114 115 136 204 205 206 207 265 278 279 280 281 282
SEMICOLON            : 2 3 4 24 30 31 49 93 94 97 98 99 99 100 100 101 101 102 102 103 104 105 106 109 114 115 121 122 123 124 125 125 133 134 134 138 176 177 211 213 214
SET                  : 81
SHL                  : 251
SHORT                : 154
SHORTINT             : 148 170
SHR                  : 252
SINGLE               : 151
STRING               : 33 62 63 129 157 158 261
TEXT                 : 
THEN                 : 208 209
TIMES                : 247
TIMES_ASIGN          : 199 200
TO                   : 219
TRUE                 : 34 262
TYPE                 : 46
UNIT                 : 3
UNTIL                : 223
USES                 : 4
VAR                  : 118 141
VIRTUAL              : 132
WHILE                : 222
WITH                 : 224
WORD                 : 149 171
XOR                  : 231
error                : 

Nonterminals, with rules where they appear

additive_expression  : 235 236 244 245
array_type           : 56 162
asm_statement        : 190
assignment           : 179
call_argument        : 42 43
call_argument_list   : 42 44
call_argument_list_opt : 204 205 206 207
case_label           : 213 214 218
case_list            : 210 211 212 213
case_statement       : 183
compound_statement   : 21 99 100 101 102 125 134 181
const_declaration    : 28 29
const_declaration_block : 11
const_list           : 27 28
constant             : 30 31 116 117 216 217 217 218
constant_list        : 114 115 117
constructor_declaration : 95
constructor_implementation : 16
data_type_list       : 31 50 66 67 68 83 84 102 109 110 111 135 140 141 142
data_type_set        : 77
declaration_block    : 8
declaration_blocks   : 1 8 22 23 99 100 101 102 125 134
destructor_declaration : 96
destructor_implementation : 17
directive            : 97 98 104 106 124 133
empty                : 5 9 45 88 90 92 137 178 191 215
expression           : 39 40 40 41 41 41 122 193 194 195 196 197 198 199 200 201 202 208 209 210 211 212 219 219 220 220 221 222 223 230 231 265 268 269 269 283 284
expression_list      : 276 279 281 284
file_type            : 59 166
for_statement        : 184
function_call        : 266
function_declaration : 15
function_header      : 94 98 133 134 144
goto_statement       : 188
id_list              : 4 7 51 109 111 121 122 123 140 141 142
if_statement         : 182
implementation_block : 19
interface_block      : 20
label_declaration    : 10
labeled_sentence     : 189
main_block           : 1
method_declaration   : 91
method_implementation : 18
multiplicative_expression : 244 245 246 247 248 249 250 251 252
number_list          : 24 26
object_fields        : 86 89
object_heritage      : 86
object_methods       : 86 91
object_type          : 60 167
parameter_group      : 138 139
parameter_list       : 136 138
parameters           : 99 100 101 102 103 104 105 106 126 135
pointer_type         : 58 163
primary_expression   : 258
procedure_call       : 180
procedure_declaration : 14
procedure_header     : 93 97 124 125 143
program              : 0
program_header       : 1
record_declaration   : 107 108
record_list          : 64 65 107 114
record_type          : 55 164
relational_expression : 233 234 235
relational_operator  : 235
repeat_statement     : 186
sentence             : 176 177 208 209 209 213 214 219 220 221 222 224 228
sentences_list       : 175 176 211 212 223
set_constructor      : 38 267
set_item             : 270 271
set_item_list        : 271 272
set_range            : 81
set_type             : 57 165
simple_expression    : 230 231 232 233
string_type          : 61 168
type_declaration     : 47 48
type_declaration_block : 12
type_definition      : 49 121 122 123
type_list            : 46 47
type_range           : 69 70
type_range_list      : 66 67 70
unary_expression     : 247 248 249 250 251 252 253 254 255 256 257
uses_clause          : 1
var_declaration      : 89 119 120
var_declaration_block : 13
var_list             : 118 119
variable             : 193 195 197 199 201 205 225 226 259 275 276 277 278 281 282
variable_list        : 224 226
variant              : 112 113
variant_list         : 110 112
while_statement      : 185
with_statement       : 187

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_header uses_clause declaration_blocks main_block
    (2) program_header -> . PROGRAM ID SEMICOLON
    (3) program_header -> . UNIT ID SEMICOLON

    PROGRAM         shift and go to state 3
    UNIT            shift and go to state 4

    program                        shift and go to state 1
    program_header                 shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_header . uses_clause declaration_blocks main_block
    (4) uses_clause -> . USES id_list SEMICOLON
    (5) uses_clause -> . empty
    (229) empty -> .

    USES            shift and go to state 6
    BEGIN           reduce using rule 229 (empty -> .)
    LABEL           reduce using rule 229 (empty -> .)
    CONST           reduce using rule 229 (empty -> .)
    TYPE            reduce using rule 229 (empty -> .)
    VAR             reduce using rule 229 (empty -> .)
    CONSTRUCTOR     reduce using rule 229 (empty -> .)
    DESTRUCTOR      reduce using rule 229 (empty -> .)
    PROCEDURE       reduce using rule 229 (empty -> .)
    FUNCTION        reduce using rule 229 (empty -> .)
    IMPLEMENTATION  reduce using rule 229 (empty -> .)
    INTERFACE       reduce using rule 229 (empty -> .)

    uses_clause                    shift and go to state 5
    empty                          shift and go to state 7

state 3

    (2) program_header -> PROGRAM . ID SEMICOLON

    ID              shift and go to state 8


state 4

    (3) program_header -> UNIT . ID SEMICOLON

    ID              shift and go to state 9


state 5

    (1) program -> program_header uses_clause . declaration_blocks main_block
    (8) declaration_blocks -> . declaration_blocks declaration_block
    (9) declaration_blocks -> . empty
    (229) empty -> .

    BEGIN           reduce using rule 229 (empty -> .)
    LABEL           reduce using rule 229 (empty -> .)
    CONST           reduce using rule 229 (empty -> .)
    TYPE            reduce using rule 229 (empty -> .)
    VAR             reduce using rule 229 (empty -> .)
    CONSTRUCTOR     reduce using rule 229 (empty -> .)
    DESTRUCTOR      reduce using rule 229 (empty -> .)
    PROCEDURE       reduce using rule 229 (empty -> .)
    FUNCTION        reduce using rule 229 (empty -> .)
    IMPLEMENTATION  reduce using rule 229 (empty -> .)
    INTERFACE       reduce using rule 229 (empty -> .)

    declaration_blocks             shift and go to state 10
    empty                          shift and go to state 11

state 6

    (4) uses_clause -> USES . id_list SEMICOLON
    (6) id_list -> . ID
    (7) id_list -> . id_list COMMA ID

    ID              shift and go to state 13

    id_list                        shift and go to state 12

state 7

    (5) uses_clause -> empty .

    BEGIN           reduce using rule 5 (uses_clause -> empty .)
    LABEL           reduce using rule 5 (uses_clause -> empty .)
    CONST           reduce using rule 5 (uses_clause -> empty .)
    TYPE            reduce using rule 5 (uses_clause -> empty .)
    VAR             reduce using rule 5 (uses_clause -> empty .)
    CONSTRUCTOR     reduce using rule 5 (uses_clause -> empty .)
    DESTRUCTOR      reduce using rule 5 (uses_clause -> empty .)
    PROCEDURE       reduce using rule 5 (uses_clause -> empty .)
    FUNCTION        reduce using rule 5 (uses_clause -> empty .)
    IMPLEMENTATION  reduce using rule 5 (uses_clause -> empty .)
    INTERFACE       reduce using rule 5 (uses_clause -> empty .)


state 8

    (2) program_header -> PROGRAM ID . SEMICOLON

    SEMICOLON       shift and go to state 14


state 9

    (3) program_header -> UNIT ID . SEMICOLON

    SEMICOLON       shift and go to state 15


state 10

    (1) program -> program_header uses_clause declaration_blocks . main_block
    (8) declaration_blocks -> declaration_blocks . declaration_block
    (21) main_block -> . compound_statement DOT
    (10) declaration_block -> . label_declaration
    (11) declaration_block -> . const_declaration_block
    (12) declaration_block -> . type_declaration_block
    (13) declaration_block -> . var_declaration_block
    (14) declaration_block -> . procedure_declaration
    (15) declaration_block -> . function_declaration
    (16) declaration_block -> . constructor_implementation
    (17) declaration_block -> . destructor_implementation
    (18) declaration_block -> . method_implementation
    (19) declaration_block -> . implementation_block
    (20) declaration_block -> . interface_block
    (175) compound_statement -> . BEGIN sentences_list END
    (24) label_declaration -> . LABEL number_list SEMICOLON
    (27) const_declaration_block -> . CONST const_list
    (46) type_declaration_block -> . TYPE type_list
    (118) var_declaration_block -> . VAR var_list
    (124) procedure_declaration -> . procedure_header SEMICOLON directive
    (125) procedure_declaration -> . procedure_header SEMICOLON declaration_blocks compound_statement SEMICOLON
    (133) function_declaration -> . function_header SEMICOLON directive
    (134) function_declaration -> . function_header SEMICOLON declaration_blocks compound_statement SEMICOLON
    (99) constructor_implementation -> . CONSTRUCTOR ID DOT ID parameters SEMICOLON declaration_blocks compound_statement SEMICOLON
    (100) destructor_implementation -> . DESTRUCTOR ID DOT ID parameters SEMICOLON declaration_blocks compound_statement SEMICOLON
    (101) method_implementation -> . PROCEDURE ID DOT ID parameters SEMICOLON declaration_blocks compound_statement SEMICOLON
    (102) method_implementation -> . FUNCTION ID DOT ID parameters COLON data_type_list SEMICOLON declaration_blocks compound_statement SEMICOLON
    (23) implementation_block -> . IMPLEMENTATION declaration_blocks
    (22) interface_block -> . INTERFACE declaration_blocks
    (126) procedure_header -> . PROCEDURE ID parameters
    (135) function_header -> . FUNCTION ID parameters COLON data_type_list

    BEGIN           shift and go to state 30
    LABEL           shift and go to state 31
    CONST           shift and go to state 32
    TYPE            shift and go to state 33
    VAR             shift and go to state 34
    CONSTRUCTOR     shift and go to state 37
    DESTRUCTOR      shift and go to state 38
    PROCEDURE       shift and go to state 39
    FUNCTION        shift and go to state 40
    IMPLEMENTATION  shift and go to state 41
    INTERFACE       shift and go to state 42

    main_block                     shift and go to state 16
    declaration_block              shift and go to state 17
    compound_statement             shift and go to state 18
    label_declaration              shift and go to state 19
    const_declaration_block        shift and go to state 20
    type_declaration_block         shift and go to state 21
    var_declaration_block          shift and go to state 22
    procedure_declaration          shift and go to state 23
    function_declaration           shift and go to state 24
    constructor_implementation     shift and go to state 25
    destructor_implementation      shift and go to state 26
    method_implementation          shift and go to state 27
    implementation_block           shift and go to state 28
    interface_block                shift and go to state 29
    procedure_header               shift and go to state 35
    function_header                shift and go to state 36

state 11

    (9) declaration_blocks -> empty .

    BEGIN           reduce using rule 9 (declaration_blocks -> empty .)
    LABEL           reduce using rule 9 (declaration_blocks -> empty .)
    CONST           reduce using rule 9 (declaration_blocks -> empty .)
    TYPE            reduce using rule 9 (declaration_blocks -> empty .)
    VAR             reduce using rule 9 (declaration_blocks -> empty .)
    CONSTRUCTOR     reduce using rule 9 (declaration_blocks -> empty .)
    DESTRUCTOR      reduce using rule 9 (declaration_blocks -> empty .)
    PROCEDURE       reduce using rule 9 (declaration_blocks -> empty .)
    FUNCTION        reduce using rule 9 (declaration_blocks -> empty .)
    IMPLEMENTATION  reduce using rule 9 (declaration_blocks -> empty .)
    INTERFACE       reduce using rule 9 (declaration_blocks -> empty .)


state 12

    (4) uses_clause -> USES id_list . SEMICOLON
    (7) id_list -> id_list . COMMA ID

    SEMICOLON       shift and go to state 43
    COMMA           shift and go to state 44


state 13

    (6) id_list -> ID .

    SEMICOLON       reduce using rule 6 (id_list -> ID .)
    COMMA           reduce using rule 6 (id_list -> ID .)
    COLON           reduce using rule 6 (id_list -> ID .)
    RPAREN          reduce using rule 6 (id_list -> ID .)


state 14

    (2) program_header -> PROGRAM ID SEMICOLON .

    USES            reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    BEGIN           reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    LABEL           reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    CONST           reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    TYPE            reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    VAR             reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    CONSTRUCTOR     reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    DESTRUCTOR      reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    PROCEDURE       reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    FUNCTION        reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    IMPLEMENTATION  reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)
    INTERFACE       reduce using rule 2 (program_header -> PROGRAM ID SEMICOLON .)


state 15

    (3) program_header -> UNIT ID SEMICOLON .

    USES            reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    BEGIN           reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    LABEL           reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    CONST           reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    TYPE            reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    VAR             reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    CONSTRUCTOR     reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    DESTRUCTOR      reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    PROCEDURE       reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    FUNCTION        reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    IMPLEMENTATION  reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)
    INTERFACE       reduce using rule 3 (program_header -> UNIT ID SEMICOLON .)


state 16

    (1) program -> program_header uses_clause declaration_blocks main_block .

    $end            reduce using rule 1 (program -> program_header uses_clause declaration_blocks main_block .)


state 17

    (8) declaration_blocks -> declaration_blocks declaration_block .

    BEGIN           reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)
    LABEL           reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)
    CONST           reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)
    TYPE            reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)
    VAR             reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)
    CONSTRUCTOR     reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)
    DESTRUCTOR      reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)
    PROCEDURE       reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)
    FUNCTION        reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)
    IMPLEMENTATION  reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)
    INTERFACE       reduce using rule 8 (declaration_blocks -> declaration_blocks declaration_block .)


state 18

    (21) main_block -> compound_statement . DOT

    DOT             shift and go to state 45


state 19

    (10) declaration_block -> label_declaration .
